# duckie

./: .gitignore  .gitmodules  .prettierignore  README.md  bsconfig.json  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.cjs  vite.config.ts
llama/: Cargo.toml  build.rs
llama/src/: lib.rs  utils.rs
models/: README.md  requirements.txt  setup_ngrok.sh
models/notebooks/: alpaca-lora.ipynb
models/server/: main.py
src/: App.res  Main.res  Server.res  Tauri.res  app.css  app.tsx  main.tsx  state.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/chains/: eslint.tsx
src/components/: activity_panel.tsx  chat_page.tsx  chat_panel.tsx  create_workspace_modal.tsx  editor.tsx  modal.tsx  models_page.tsx  side_panel.tsx  side_panel_container.tsx  title_bar.tsx  tool_panel_eslint.tsx  workspace.tsx  workspace_panel.tsx
src/types/: eslint.tsx
src/utils/: styled.tsx  use_global_shortcuts.ts  use_shortcut.ts
